--- a/src/Reservation/Reservation.css
+++ b/src/Reservation/Reservation.css
@@ -1,9 +1,24 @@
 .reservation-card {
-box-sizing: border-box;
-border: 2px solid #038080;
-padding: 10px;
+/* box-sizing: border-box; */
+border: 4px solid #038080;
+border-radius: 5px;
+padding: 3px;
 display: flex;
+height: 150px;
+background-color: whitesmoke;
 flex-direction: column;
-justify-content: space-between;
+justify-content: center;
 align-items: center;
+}
+.res-button {
+  height: 30px;
+  width: 60%;
+  background-color: #038080;
+  color: whitesmoke;
+}
+.reservation-card p {
+  margin: 3px;
+}
+.reservation-card h3 {
+  margin: 3px;
 }
