completion of iteration 2 with styling

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -18,3 +18,10 @@
   font-family: 'Pacifico', cursive;
   font-size: 50px;
 }
+
+.make-reservations {
+  color: teal;
+  font-size: 50px;
+  text-align: center;
+  margin-top: 20px;
+}
