--- a/src/Reservation/Reservation.css
+++ b/src/Reservation/Reservation.css
@@ -1,5 +1,5 @@
 .reservation-card {
-/* box-sizing: border-box; */
+box-sizing: border-box;
 border: 4px solid #038080;
 border-radius: 5px;
 padding: 3px;
